fix ui-label text align style

--- a/html/plugins/css/plugins.css
+++ b/html/plugins/css/plugins.css
@@ -1660,7 +1660,17 @@ form.lined .form-group:last-of-type, form.lined .row:last-of-type {
 	border-bottom: 0;
 }
 .ui-view > .row > .ui-label {
-	text-align: right;
+	white-space: pre-wrap;
+}
+@media (min-width: 768px) {
+	.ui-view > .row > .ui-label {
+		text-align: right;
+	}
+}
+@media (max-width: 767px) {
+	.ui-view > .row > .ui-label {
+		width: auto;
+	}
 }
 .ui-view > .row > .ui-value {
 	white-space: pre-wrap;
